Improved post-processing, see #3136
Added processor module, see #3136