@@ -58,7 +58,7 @@ public class SimSharingEvents {
     //Call it "cookie" instead of "id" so it doesn't sound so scary to end users
     private static final String MACHINE_ID_KEY = "machine.cookie";
 
-    public static final String OBJECT_SIM = "sim";
+    public static final String OBJECT_SYSTEM = "system";
     public static final String ACTION_EXITED = "exited";
 
     //Determine whether the sim should try to send event messages to the server
@@ -154,7 +154,7 @@ public class SimSharingEvents {
                         t.printStackTrace();
                     }
 
-                    actionPerformed( OBJECT_SIM, "started",
+                    actionPerformed( OBJECT_SYSTEM, "started",
                                      param( "time", simStartedTime.get() ),
                                      param( "name", config.getName() ),
                                      param( "version", config.getVersion().formatForAboutDialog() ),
@@ -162,7 +162,7 @@ public class SimSharingEvents {
                                      param( "flavor", config.getFlavor() ),
                                      param( "locale", config.getLocale().toString() ),
                                      param( "distribution tag", config.getDistributionTag() ) );
-                    actionPerformed( OBJECT_SIM, "connected to server" );
+                    actionPerformed( OBJECT_SYSTEM, "connected to server" );
 
                     //Report on any messages that were collected while we were trying to connect to the server
                     if ( client != null ) {
