@@ -7,7 +7,7 @@ import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
 
 import static edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents.ACTION_EXITED;
-import static edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents.OBJECT_SIM;
+import static edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents.OBJECT_SYSTEM;
 
 /**
  * PhetExit encapsulates the various ways of exiting a sim.  It also sends out notifications before System.exit(0) is
@@ -34,7 +34,7 @@ public class PhetExit {
     public static void exit() {
 
         // Send a message for sim exit, work for both frame closing and File - > Exit( but not application kill )
-        SimSharingEvents.actionPerformed( OBJECT_SIM, ACTION_EXITED );
+        SimSharingEvents.actionPerformed( OBJECT_SYSTEM, ACTION_EXITED );
 
         for ( VoidFunction0 exitListener : exitListeners ) {
             exitListener.apply();
