@@ -1,2 +1,3 @@
+Added plotting for events vs time, see #3136
 Improved post-processing, see #3136
 Added processor module, see #3136
